Fixed dark mode issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.form-check-label {
-  color: rgb(16, 16, 16);
-}
-
 body {
   padding-bottom: 30px;
 }
