--- a/src/components/EmployeePostJob/index.css
+++ b/src/components/EmployeePostJob/index.css
@@ -29,6 +29,8 @@
   border-radius: 10px;
   padding: 20px;
   margin-bottom: 20px;
+  background-color: #cfcfcf;
+  color: #000000;
 }
 
 .form-check-input {
